[gd_scene load_steps=7 format=3 uid="uid://dcr43wwjbl277"]

[ext_resource type="Script" path="res://ShipBuilderMenu/parts_menu.gd" id="1_66jqt"]
[ext_resource type="Resource" uid="uid://bbmyhthl3l2tk" path="res://ShipBuilderMenu/Groups/ship_parts_hulls.tres" id="2_r4mvo"]
[ext_resource type="Resource" uid="uid://rsfh2prj5v3v" path="res://ShipBuilderMenu/Groups/ship_parts_engines.tres" id="3_cnisb"]
[ext_resource type="Resource" uid="uid://dgjevj53li4f" path="res://ShipBuilderMenu/Groups/ship_parts_utilities.tres" id="4_jhdry"]
[ext_resource type="Resource" uid="uid://s17541bammjh" path="res://ShipBuilderMenu/Groups/ship_parts_weapons.tres" id="5_mc4tw"]
[ext_resource type="Resource" uid="uid://dt3o823vdaorp" path="res://ShipBuilderMenu/Groups/ship_parts_sheilds.tres" id="6_ubqgr"]

[node name="Parts_Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_66jqt")
ship_part_hulls = ExtResource("2_r4mvo")
ship_part_engines = ExtResource("3_cnisb")
ship_part_utilites = ExtResource("4_jhdry")
ship_part_weapons = ExtResource("5_mc4tw")
ship_part_sheilds = ExtResource("6_ubqgr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HullsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Hulls
"

[node name="EnginesButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Engines
"

[node name="UtilityButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Utilities
"

[node name="WeaponsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Weapons
"

[node name="SheildsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Sheilds"

[node name="PartsDisplay" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(172, 574)
layout_mode = 0
offset_left = 84.0
offset_right = 304.0
offset_bottom = 574.0

[node name="GridContainer" type="GridContainer" parent="PartsDisplay"]
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 2

[connection signal="pressed" from="VBoxContainer/HullsButton" to="." method="_on_hulls_button_pressed"]
[connection signal="pressed" from="VBoxContainer/EnginesButton" to="." method="_on_engines_button_pressed"]
[connection signal="pressed" from="VBoxContainer/UtilityButton" to="." method="_on_utility_button_pressed"]
[connection signal="pressed" from="VBoxContainer/WeaponsButton" to="." method="_on_weapons_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SheildsButton" to="." method="_on_sheilds_button_pressed"]
